src/parser.zig
// parser — recursive descent parser for forge
//
// consumes tokens from the lexer and builds an AST.
// hand-written for full control over error messages
// and error recovery.
//
// design: pre-tokenize the full source via lexer.tokenize(),
// then walk the token array with arbitrary lookahead.
// all AST nodes are arena-allocated and freed in one shot.

const std = @import("std");
const ast = @import("ast.zig");
const lexer_mod = @import("lexer.zig");
const errors = @import("errors.zig");

const Token = lexer_mod.Token;
const TokenKind = lexer_mod.TokenKind;
const Lexer = lexer_mod.Lexer;
const Location = errors.Location;

/// errors that can occur during parsing.
/// just allocation failures — parse errors are collected in diagnostics.
pub const ParseError = std.mem.Allocator.Error;

pub const Parser = struct {
    tokens: []const Token,
    pos: u32,
    allocator: std.mem.Allocator,
    diagnostics: errors.DiagnosticList,
    source: []const u8,

    pub fn init(tokens: []const Token, source: []const u8, allocator: std.mem.Allocator) Parser {
        return .{
            .tokens = tokens,
            .pos = 0,
            .allocator = allocator,
            .diagnostics = errors.DiagnosticList.init(allocator, source),
            .source = source,
        };
    }

    pub fn deinit(self: *Parser) void {
        self.diagnostics.deinit();
    }

    // ---------------------------------------------------------------
    // token navigation
    // ---------------------------------------------------------------
    // all of these skip comment tokens automatically.

    /// look at the current token without consuming it.
    fn peek(self: *const Parser) Token {
        var i = self.pos;
        while (i < self.tokens.len) {
            if (self.tokens[i].kind != .comment) return self.tokens[i];
            i += 1;
        }
        // past the end — return the last token (should be eof)
        return self.tokens[self.tokens.len - 1];
    }

    /// look ahead by `offset` non-comment tokens.
    fn peekAhead(self: *const Parser, offset: u32) Token {
        var i = self.pos;
        var skipped: u32 = 0;
        while (i < self.tokens.len) {
            if (self.tokens[i].kind != .comment) {
                if (skipped == offset) return self.tokens[i];
                skipped += 1;
            }
            i += 1;
        }
        return self.tokens[self.tokens.len - 1];
    }

    /// consume the current token and return it.
    fn advance(self: *Parser) Token {
        while (self.pos < self.tokens.len) {
            const tok = self.tokens[self.pos];
            self.pos += 1;
            if (tok.kind != .comment) return tok;
        }
        return self.tokens[self.tokens.len - 1];
    }

    /// check if the current token matches the expected kind.
    fn check(self: *const Parser, kind: TokenKind) bool {
        return self.peek().kind == kind;
    }

    /// if the current token matches, consume it and return true.
    fn match(self: *Parser, kind: TokenKind) bool {
        if (self.check(kind)) {
            _ = self.advance();
            return true;
        }
        return false;
    }

    /// consume a token of the expected kind, or emit an error.
    fn expect(self: *Parser, kind: TokenKind) ParseError!Token {
        const tok = self.peek();
        if (tok.kind == kind) {
            return self.advance();
        }
        try self.diagnostics.addError(
            tok.location,
            try std.fmt.allocPrint(self.allocator, "expected {s}, got {s}", .{
                @tagName(kind),
                @tagName(tok.kind),
            }),
        );
        return tok;
    }

    /// skip over newline tokens. useful inside arg lists, param lists, etc.
    fn skipNewlines(self: *Parser) void {
        while (self.peek().kind == .newline) {
            _ = self.advance();
        }
    }

    /// allocate a value on the arena and return a pointer to it.
    fn create(self: *Parser, comptime T: type, value: T) ParseError!*const T {
        const ptr = try self.allocator.create(T);
        @as(*T, @constCast(ptr)).* = value;
        return ptr;
    }

    /// skip tokens until we reach a synchronization point.
    /// used for error recovery — gets us back to a known state.
    fn synchronize(self: *Parser) void {
        while (self.peek().kind != .eof) {
            const kind = self.peek().kind;
            if (kind == .newline or kind == .dedent) {
                _ = self.advance();
                return;
            }
            _ = self.advance();
        }
    }

    // ---------------------------------------------------------------
    // type expressions
    // ---------------------------------------------------------------

    /// type_expr = base_type ["?"] | base_type "!" [type_expr]
    fn parseTypeExpr(self: *Parser) ParseError!*const ast.TypeExpr {
        const base = try self.parseBaseType();

        // optional: T?
        if (self.check(.question)) {
            const q_tok = self.advance();
            return self.create(ast.TypeExpr, .{
                .kind = .{ .optional = base },
                .location = Location.span(base.location, q_tok.location),
            });
        }

        // result: T! or T!E
        if (self.check(.bang)) {
            const bang_tok = self.advance();

            // check if there's an error type following
            // it's T!E only if the next token can start a type (identifier or fn or lparen)
            const next = self.peek().kind;
            if (next == .identifier or next == .kw_fn or next == .lparen) {
                const err_type = try self.parseTypeExpr();
                return self.create(ast.TypeExpr, .{
                    .kind = .{ .result = .{
                        .ok_type = base,
                        .err_type = err_type,
                    } },
                    .location = Location.span(base.location, err_type.location),
                });
            }

            return self.create(ast.TypeExpr, .{
                .kind = .{ .result = .{
                    .ok_type = base,
                    .err_type = null,
                } },
                .location = Location.span(base.location, bang_tok.location),
            });
        }

        return base;
    }

    /// base_type = IDENT ["[" type_list "]"]
    ///           | "(" type_list ")"
    ///           | fn_type
    fn parseBaseType(self: *Parser) ParseError!*const ast.TypeExpr {
        const tok = self.peek();

        // fn type: fn(Int, String) -> Bool
        if (tok.kind == .kw_fn) {
            return self.parseFnType();
        }

        // tuple type: (Int, String)
        if (tok.kind == .lparen) {
            return self.parseTupleType();
        }

        // named or generic type
        if (tok.kind == .identifier) {
            const name_tok = self.advance();

            // check for generic args: Type[T, U]
            if (self.check(.lbracket)) {
                _ = self.advance(); // skip [
                var args: std.ArrayList(*const ast.TypeExpr) = .empty;
                try args.append(self.allocator, try self.parseTypeExpr());
                while (self.match(.comma)) {
                    try args.append(self.allocator, try self.parseTypeExpr());
                }
                const end_tok = try self.expect(.rbracket);

                return self.create(ast.TypeExpr, .{
                    .kind = .{ .generic = .{
                        .name = name_tok.lexeme,
                        .args = try args.toOwnedSlice(self.allocator),
                    } },
                    .location = Location.span(name_tok.location, end_tok.location),
                });
            }

            return self.create(ast.TypeExpr, .{
                .kind = .{ .named = name_tok.lexeme },
                .location = name_tok.location,
            });
        }

        // unexpected token
        try self.diagnostics.addError(tok.location, "expected type");
        self.synchronize();
        return self.create(ast.TypeExpr, .{
            .kind = .{ .named = "" },
            .location = tok.location,
        });
    }

    /// fn_type = "fn" "(" [type_list] ")" ["->" type_expr]
    fn parseFnType(self: *Parser) ParseError!*const ast.TypeExpr {
        const fn_tok = self.advance(); // skip fn
        _ = try self.expect(.lparen);

        var params: std.ArrayList(*const ast.TypeExpr) = .empty;
        if (!self.check(.rparen)) {
            try params.append(self.allocator, try self.parseTypeExpr());
            while (self.match(.comma)) {
                try params.append(self.allocator, try self.parseTypeExpr());
            }
        }
        var end_loc = (try self.expect(.rparen)).location;

        var return_type: ?*const ast.TypeExpr = null;
        if (self.match(.arrow)) {
            const ret = try self.parseTypeExpr();
            return_type = ret;
            end_loc = ret.location;
        }

        return self.create(ast.TypeExpr, .{
            .kind = .{ .fn_type = .{
                .params = try params.toOwnedSlice(self.allocator),
                .return_type = return_type,
            } },
            .location = Location.span(fn_tok.location, end_loc),
        });
    }

    /// tuple type: "(" type "," { type "," } ")"
    fn parseTupleType(self: *Parser) ParseError!*const ast.TypeExpr {
        const lparen_tok = self.advance(); // skip (

        var types: std.ArrayList(*const ast.TypeExpr) = .empty;
        if (!self.check(.rparen)) {
            try types.append(self.allocator, try self.parseTypeExpr());
            while (self.match(.comma)) {
                if (self.check(.rparen)) break;
                try types.append(self.allocator, try self.parseTypeExpr());
            }
        }
        const rparen_tok = try self.expect(.rparen);

        return self.create(ast.TypeExpr, .{
            .kind = .{ .tuple = try types.toOwnedSlice(self.allocator) },
            .location = Location.span(lparen_tok.location, rparen_tok.location),
        });
    }

    // ---------------------------------------------------------------
    // expressions
    // ---------------------------------------------------------------

    /// entry point for expression parsing.
    pub fn parseExpression(self: *Parser) ParseError!*const ast.Expr {
        return self.parseOrExpr();
    }

    /// or_expr = and_expr { "or" and_expr }
    fn parseOrExpr(self: *Parser) ParseError!*const ast.Expr {
        var left = try self.parseAndExpr();
        while (self.check(.kw_or)) {
            _ = self.advance();
            const right = try self.parseAndExpr();
            left = try self.create(ast.Expr, .{
                .kind = .{ .binary = .{ .left = left, .op = .@"or", .right = right } },
                .location = Location.span(left.location, right.location),
            });
        }
        return left;
    }

    /// and_expr = not_expr { "and" not_expr }
    fn parseAndExpr(self: *Parser) ParseError!*const ast.Expr {
        var left = try self.parseNotExpr();
        while (self.check(.kw_and)) {
            _ = self.advance();
            const right = try self.parseNotExpr();
            left = try self.create(ast.Expr, .{
                .kind = .{ .binary = .{ .left = left, .op = .@"and", .right = right } },
                .location = Location.span(left.location, right.location),
            });
        }
        return left;
    }

    /// not_expr = "not" not_expr | comparison
    fn parseNotExpr(self: *Parser) ParseError!*const ast.Expr {
        if (self.check(.kw_not)) {
            const tok = self.advance();
            const operand = try self.parseNotExpr();
            return self.create(ast.Expr, .{
                .kind = .{ .unary = .{ .op = .not, .operand = operand } },
                .location = Location.span(tok.location, operand.location),
            });
        }
        return self.parseComparison();
    }

    /// comparison = pipe_expr { comp_op pipe_expr }
    fn parseComparison(self: *Parser) ParseError!*const ast.Expr {
        var left = try self.parsePipeExpr();
        while (true) {
            const op: ast.BinaryOp = switch (self.peek().kind) {
                .eq_eq => .eq,
                .bang_eq => .neq,
                .less => .lt,
                .greater => .gt,
                .less_eq => .lte,
                .greater_eq => .gte,
                else => break,
            };
            _ = self.advance();
            const right = try self.parsePipeExpr();
            left = try self.create(ast.Expr, .{
                .kind = .{ .binary = .{ .left = left, .op = op, .right = right } },
                .location = Location.span(left.location, right.location),
            });
        }
        return left;
    }

    /// pipe_expr = add_expr { "|" add_expr }
    fn parsePipeExpr(self: *Parser) ParseError!*const ast.Expr {
        var left = try self.parseAddExpr();
        while (self.check(.pipe)) {
            _ = self.advance();
            const right = try self.parseAddExpr();
            left = try self.create(ast.Expr, .{
                .kind = .{ .binary = .{ .left = left, .op = .pipe, .right = right } },
                .location = Location.span(left.location, right.location),
            });
        }
        return left;
    }

    /// add_expr = mul_expr { ("+" | "-") mul_expr }
    fn parseAddExpr(self: *Parser) ParseError!*const ast.Expr {
        var left = try self.parseMulExpr();
        while (true) {
            const op: ast.BinaryOp = switch (self.peek().kind) {
                .plus => .add,
                .minus => .sub,
                else => break,
            };
            _ = self.advance();
            const right = try self.parseMulExpr();
            left = try self.create(ast.Expr, .{
                .kind = .{ .binary = .{ .left = left, .op = op, .right = right } },
                .location = Location.span(left.location, right.location),
            });
        }
        return left;
    }

    /// mul_expr = unary_expr { ("*" | "/" | "%") unary_expr }
    fn parseMulExpr(self: *Parser) ParseError!*const ast.Expr {
        var left = try self.parseUnaryExpr();
        while (true) {
            const op: ast.BinaryOp = switch (self.peek().kind) {
                .star => .mul,
                .slash => .div,
                .percent => .mod,
                else => break,
            };
            _ = self.advance();
            const right = try self.parseUnaryExpr();
            left = try self.create(ast.Expr, .{
                .kind = .{ .binary = .{ .left = left, .op = op, .right = right } },
                .location = Location.span(left.location, right.location),
            });
        }
        return left;
    }

    /// unary_expr = "-" unary_expr | postfix_expr
    fn parseUnaryExpr(self: *Parser) ParseError!*const ast.Expr {
        if (self.check(.minus)) {
            const tok = self.advance();
            const operand = try self.parseUnaryExpr();
            return self.create(ast.Expr, .{
                .kind = .{ .unary = .{ .op = .negate, .operand = operand } },
                .location = Location.span(tok.location, operand.location),
            });
        }
        return self.parsePostfixExpr();
    }

    /// postfix_expr = primary { "?" | "!" | call | index | field_access | method_call }
    fn parsePostfixExpr(self: *Parser) ParseError!*const ast.Expr {
        var expr = try self.parsePrimary();

        while (true) {
            switch (self.peek().kind) {
                // unwrap: expr?
                .question => {
                    const tok = self.advance();
                    expr = try self.create(ast.Expr, .{
                        .kind = .{ .unwrap = expr },
                        .location = Location.span(expr.location, tok.location),
                    });
                },
                // try: expr!
                .bang => {
                    const tok = self.advance();
                    expr = try self.create(ast.Expr, .{
                        .kind = .{ .try_expr = expr },
                        .location = Location.span(expr.location, tok.location),
                    });
                },
                // call: expr(args)
                .lparen => {
                    expr = try self.parseCallExpr(expr);
                },
                // index: expr[index]
                .lbracket => {
                    _ = self.advance(); // skip [
                    const index = try self.parseExpression();
                    const end_tok = try self.expect(.rbracket);
                    expr = try self.create(ast.Expr, .{
                        .kind = .{ .index = .{ .object = expr, .index = index } },
                        .location = Location.span(expr.location, end_tok.location),
                    });
                },
                // field access or method call: expr.name or expr.name(args)
                .dot => {
                    _ = self.advance(); // skip .
                    const name_tok = try self.expect(.identifier);

                    // method call: expr.name(args)
                    if (self.check(.lparen)) {
                        _ = self.advance(); // skip (
                        const args = try self.parseArgList();
                        const end_tok = try self.expect(.rparen);
                        expr = try self.create(ast.Expr, .{
                            .kind = .{ .method_call = .{
                                .receiver = expr,
                                .method = name_tok.lexeme,
                                .args = args,
                            } },
                            .location = Location.span(expr.location, end_tok.location),
                        });
                    } else {
                        // field access: expr.name
                        expr = try self.create(ast.Expr, .{
                            .kind = .{ .field_access = .{
                                .object = expr,
                                .field = name_tok.lexeme,
                            } },
                            .location = Location.span(expr.location, name_tok.location),
                        });
                    }
                },
                else => break,
            }
        }
        return expr;
    }

    /// parse a function call's argument list (already past the opening paren).
    fn parseCallExpr(self: *Parser, callee: *const ast.Expr) ParseError!*const ast.Expr {
        _ = self.advance(); // skip (
        const args = try self.parseArgList();
        const end_tok = try self.expect(.rparen);
        return self.create(ast.Expr, .{
            .kind = .{ .call = .{ .callee = callee, .args = args } },
            .location = Location.span(callee.location, end_tok.location),
        });
    }

    /// parse comma-separated argument list: [name "="] expr { "," [name "="] expr }
    fn parseArgList(self: *Parser) ParseError![]const ast.Arg {
        var args: std.ArrayList(ast.Arg) = .empty;
        self.skipNewlines();
        if (self.check(.rparen)) return args.toOwnedSlice(self.allocator);

        try args.append(self.allocator, try self.parseArg());
        while (self.match(.comma)) {
            self.skipNewlines();
            if (self.check(.rparen)) break;
            try args.append(self.allocator, try self.parseArg());
        }
        self.skipNewlines();
        return args.toOwnedSlice(self.allocator);
    }

    /// parse a single argument: [name "="] expr
    fn parseArg(self: *Parser) ParseError!ast.Arg {
        const loc = self.peek().location;

        // check for named argument: name = expr
        if (self.peek().kind == .identifier and self.peekAhead(1).kind == .eq) {
            const name = self.advance().lexeme;
            _ = self.advance(); // skip =
            const value = try self.parseExpression();
            return .{ .name = name, .value = value, .location = loc };
        }

        const value = try self.parseExpression();
        return .{ .name = null, .value = value, .location = loc };
    }

    /// primary = literal | ident | self | grouped/tuple | list | map/set | if_expr | match_expr | lambda
    fn parsePrimary(self: *Parser) ParseError!*const ast.Expr {
        const tok = self.peek();

        switch (tok.kind) {
            // integer literal
            .int_lit => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .{ .int_lit = tok.lexeme },
                    .location = tok.location,
                });
            },
            // float literal
            .float_lit => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .{ .float_lit = tok.lexeme },
                    .location = tok.location,
                });
            },
            // string literal (no interpolation)
            .string_lit => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .{ .string_lit = tok.lexeme },
                    .location = tok.location,
                });
            },
            // interpolated string
            .string_start => {
                return self.parseStringInterpolation();
            },
            // boolean literals
            .kw_true => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .{ .bool_lit = true },
                    .location = tok.location,
                });
            },
            .kw_false => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .{ .bool_lit = false },
                    .location = tok.location,
                });
            },
            // none
            .kw_none => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .none_lit,
                    .location = tok.location,
                });
            },
            // self
            .kw_self => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .self_expr,
                    .location = tok.location,
                });
            },
            // identifier
            .identifier => {
                _ = self.advance();
                return self.create(ast.Expr, .{
                    .kind = .{ .ident = tok.lexeme },
                    .location = tok.location,
                });
            },
            // grouped expression or tuple: (expr) or (expr, expr, ...)
            .lparen => {
                return self.parseGroupedOrTuple();
            },
            // list literal: [expr, expr, ...]
            .lbracket => {
                return self.parseListLiteral();
            },
            // map or set literal: {k: v, ...} or {x, y, ...}
            .lbrace => {
                return self.parseMapOrSetLiteral();
            },
            // if expression
            .kw_if => {
                return self.parseIfExpr();
            },
            // match expression
            .kw_match => {
                return self.parseMatchExpr();
            },
            // lambda: fn(params) => expr  or  fn(params): block
            .kw_fn => {
                return self.parseLambda();
            },
            else => {
                try self.diagnostics.addError(tok.location, "expected expression");
                self.synchronize();
                return self.create(ast.Expr, .{
                    .kind = .err,
                    .location = tok.location,
                });
            },
        }
    }

    /// parse grouped expression or tuple: (expr) or (expr,) or (expr, expr)
    fn parseGroupedOrTuple(self: *Parser) ParseError!*const ast.Expr {
        const lparen = self.advance(); // skip (
        self.skipNewlines();

        // empty tuple: ()
        if (self.check(.rparen)) {
            const rparen = self.advance();
            return self.create(ast.Expr, .{
                .kind = .{ .tuple = &.{} },
                .location = Location.span(lparen.location, rparen.location),
            });
        }

        const first = try self.parseExpression();
        self.skipNewlines();

        // tuple with trailing comma or multiple elements
        if (self.check(.comma)) {
            var elements: std.ArrayList(*const ast.Expr) = .empty;
            try elements.append(self.allocator, first);
            while (self.match(.comma)) {
                self.skipNewlines();
                if (self.check(.rparen)) break;
                try elements.append(self.allocator, try self.parseExpression());
                self.skipNewlines();
            }
            const rparen = try self.expect(.rparen);
            return self.create(ast.Expr, .{
                .kind = .{ .tuple = try elements.toOwnedSlice(self.allocator) },
                .location = Location.span(lparen.location, rparen.location),
            });
        }

        // grouped: (expr)
        const rparen = try self.expect(.rparen);
        return self.create(ast.Expr, .{
            .kind = .{ .grouped = first },
            .location = Location.span(lparen.location, rparen.location),
        });
    }

    /// list literal: [expr, expr, ...]
    fn parseListLiteral(self: *Parser) ParseError!*const ast.Expr {
        const lbracket = self.advance(); // skip [
        var elements: std.ArrayList(*const ast.Expr) = .empty;
        self.skipNewlines();

        if (!self.check(.rbracket)) {
            try elements.append(self.allocator, try self.parseExpression());
            while (self.match(.comma)) {
                self.skipNewlines();
                if (self.check(.rbracket)) break;
                try elements.append(self.allocator, try self.parseExpression());
            }
        }
        self.skipNewlines();
        const rbracket = try self.expect(.rbracket);
        return self.create(ast.Expr, .{
            .kind = .{ .list = try elements.toOwnedSlice(self.allocator) },
            .location = Location.span(lbracket.location, rbracket.location),
        });
    }

    /// map or set literal. {} = empty map, {k: v} = map, {x} = set
    fn parseMapOrSetLiteral(self: *Parser) ParseError!*const ast.Expr {
        const lbrace = self.advance(); // skip {
        self.skipNewlines();

        // empty map: {}
        if (self.check(.rbrace)) {
            const rbrace = self.advance();
            return self.create(ast.Expr, .{
                .kind = .{ .map = &.{} },
                .location = Location.span(lbrace.location, rbrace.location),
            });
        }

        // parse first expression to determine map vs set
        const first = try self.parseExpression();
        self.skipNewlines();

        // map: first expression followed by ":"
        if (self.check(.colon)) {
            _ = self.advance(); // skip :
            var entries: std.ArrayList(ast.MapEntry) = .empty;
            const first_value = try self.parseExpression();
            try entries.append(self.allocator, .{
                .key = first,
                .value = first_value,
                .location = first.location,
            });

            while (self.match(.comma)) {
                self.skipNewlines();
                if (self.check(.rbrace)) break;
                const key = try self.parseExpression();
                _ = try self.expect(.colon);
                const value = try self.parseExpression();
                try entries.append(self.allocator, .{
                    .key = key,
                    .value = value,
                    .location = key.location,
                });
            }
            self.skipNewlines();
            const rbrace = try self.expect(.rbrace);
            return self.create(ast.Expr, .{
                .kind = .{ .map = try entries.toOwnedSlice(self.allocator) },
                .location = Location.span(lbrace.location, rbrace.location),
            });
        }
